fix contrast colors- w02

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -3,7 +3,7 @@
     --nav-hover-color: black;    
 
     --background-color: #00573F ;
-    --nav-hover-background-color: blanchedalmond;    
+    --nav-hover-background-color: #DFF0D8;    
 }
 
 * {
